Updated site for store & graphic design

--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Kingdom Application Solutions LLC is a software development company that strives to glorify God through the creation and distribution of quality software and computer peripherals. We seek to aid any organization, small or large, that needs and desires mobile app development, website development, graphic design, or computer parts and peripherals. We aim to make these products and services more accessible especially to churches, ministries, missionaries, and religious non-profit organizations.
+                    Kingdom Application Solutions LLC is a technology company that strives to glorify God through the creation and distribution of quality software and computer peripherals. We seek to aid any organization, small or large, that needs and desires mobile app development, website development, graphic design, or computers and peripherals. We aim to make these products and services more accessible especially to churches, ministries, missionaries, and religious non-profit organizations.
 
                     Our goal is to provide quality mobile apps and website development either through a content management system or with custom HTML to deploy to your domain. Our user-friendly mobile apps will be deployed on both the Google Play Store and the Apple App Store and our websites are hosted on a fast server with little to no downtime. Our graphic design services are all custom and include things such as logos, graphics for printables, or brochures. Our online store provides computers, computer parts, and computer peripherals at a reasonable price.
                 </h2><br>
