--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             Who We Are
                         </h2>
                         <h4 class="subtitle justify">
-                            We are a software development company that strives to glorify God through the creation and distribution of quality software and computer peripherals for small businesses, churches, ministries, missionaries, and non-profit organizations. 
+                            We are a technology company that strives to glorify God through the creation and distribution of quality software and computer peripherals for small businesses, churches, ministries, missionaries, and non-profit organizations. 
                         </h4>
                         <h4 class="subtitle">
                             Our four core values are:
@@ -203,6 +203,31 @@
                             <source srcset="./images/websites.png" type="images/png">
                             <img class="image-home" src="./images/websites.webp" alt="Website development" width="640" height="480">
                         </picture>
+                    </div>
+                </div>
+            </div>
+        </section><hr>
+
+        <section class="hero section-padding">
+            <div class="hero-body">
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <picture>
+                            <source srcset="./images/design.webp" type="images/webp">
+                            <source srcset="./images/design.png" type="images/png">
+                            <img src="./images/design.webp" alt="Mobile apps" width="640" height="480">
+                        </picture>
+                    </div>
+                    <div class="column">
+                        <h2 class="subtitle privacy-h3">
+                            Graphic Design
+                        </h2>
+                        <h4 class="subtitle justify">
+                            We offer a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Quality graphic work allows your small business, organization, church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Custom graphic design can enable you to effectively communicate, give out information, and connect with others. <br><br> Pricing is dependent upon which type of graphic design you are needing. We can do most graphic work including logo creation, graphics for printables including flyers, brochures, banners, and door hangers. We also provide graphics for your social media page profile.
+                        </h4>
+                        <a class="button info-button" href="https://kingdomappsolutions.tech/graphic-design.html">
+                        <b>About Graphic Design</b>
+                        </a>
                     </div>
                 </div>
             </div>
