--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -196,7 +196,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    Accountability is about staying true to our word. It means we do what we say we’re going to do. If something happens to prevent that, we determine the new course and communicate quickly. We believe that accepting responsibility for your actions (and inactions) is the ultimate way to build trust and also exemplifies our committment to glorify God through our work.
+                                    Accountability is about staying true to our word. It means we do what we say we’re going to do. If something happens to prevent that, we determine the new course and communicate quickly. We believe that accepting responsibility for your actions (and inactions) is the ultimate way to build trust and also exemplifies our commitment to glorify God through our work.
                                 </div>
                             </div>
                         </div>
