Added client testimonials

--- a/contact.html
+++ b/contact.html
@@ -156,6 +156,7 @@
                                     <option>Website Development
                                     </option>
                                     <option >Graphic Design</option>
+                                    <option>Online Store</option>
                                     <option>Pricing Question(s)</option>
                                     <option>Privacy Policy Question(s)</option>
                                     <option>Affiliate Disclosure Question(s)</option>
