--- a/index.html
+++ b/index.html
@@ -231,6 +231,36 @@
                     </div>
                 </div>
             </div>
+        </section><hr>
+
+        <section class="hero section-padding">
+            <div class="hero-body">
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <h2 class="subtitle privacy-h3">
+                            Client Testimonials
+                        </h2>
+                        <h4 class="subtitle justify">
+                            We value our clients and seek to offer them our products and services to the best of our ability. Here's what some of them have to say about our services:
+                        </h4>
+                        <h4>
+                            <i>Justin has built and maintained four websites for the ministries I lead or in which I am involved. Each website is first class! When I have called upon him to update the websites, he always does so within the same day as I make my request. Justin also created an app for one of our ministries. It too is very professionally designed and connected to our website. So, when our website is updated, our app is automatically updated. Justin is thoughtful in his designs and is detail oriented. He thinks about things that would never cross my mind. I highly recommend him to design and maintain your website or app!</i><br><br><b>Jerry Fulton - Editor, Baptist Progress and Pastor, FBC Rice</b>
+                        </h4><hr>
+                        <h4>
+                            <i>
+                                So pleased with the web and app support we have received from Justin. He is knowledgeable and resourceful. He took our existing website and developed apps in iOS and Android. He configured our website to view and work well on a smartphone. He also developed forms that worked well on all three.
+                            </i><br><br><b>Heith Mitchell, Executive Director, BMA Texas Missions</b>
+                        </h4>
+                    </div><br>
+                    <div class="column">
+                        <picture>
+                            <source srcset="./images/testimonials.webp" type="images/webp">
+                            <source srcset="./images/testimonials.png" type="images/png">
+                            <img class="image-home" src="./images/testimonials.webp" alt="Website development" width="640" height="480">
+                        </picture>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <footer class="myfooter">
