Wording and small updates to all pages.

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -98,7 +98,7 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech" target="_blank">
                                 <i class="fas fa-store"></i>
                                 &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
@@ -122,7 +122,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Along with mobile app development and website development, Kingdom Application Solutions LLC provides a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Quality graphic work allows your small business, organization, church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Custom graphic design can enable you to effectively communicate, give out information, and connect with others.
+                    Quality graphic work allows your small business, organization, church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Along with mobile app development and website development, Kingdom Application Solutions LLC provides a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Custom graphic design can enable you to effectively communicate, give out information, and connect with others.
                 </h2><br>
                 <h1 class="title">
                     Pricing
