--- a/services.html
+++ b/services.html
@@ -97,7 +97,7 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech" target="_blank">
                                 <i class="fas fa-store"></i>
                                 &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
@@ -157,6 +157,22 @@
                             <div class="card-content">
                                 <div class="content justify">
                                     We offer the design and development of custom websites for small businesses, churches, ministries, missionaries, and non-profit organizations. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs, increase performance, and aid in search engine optimization. <br><br> We also offer the creation of websites through a content manangement option if that fits your needs better for easy updating. Click the link for information about <u><a href="https://kingdomappsolutions.tech/websites.html">website development pricing</a></u> for both custom and content management systems.<br>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-compass-drafting"></i>
+                                    Graphic Design
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content justify">
+                                    We provide a wide range of graphic design options including logo design, printable graphics, and social media graphics. Quality graphic work allows your small business, organization, church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! <br><br>Custom graphic design can enable you to effectively communicate, give out information, and connect with others.  Click the link for information about our custom <u><a href="https://kingdomappsolutions.tech/graphic-design.html">graphic design</a></u> work.<br>
                                 </div>
                             </div>
                         </div>
