--- a/websites.html
+++ b/websites.html
@@ -97,7 +97,7 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech" target="_blank">
                                 <i class="fas fa-store"></i>
                                 &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
@@ -125,7 +125,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Along with mobile apps & graphic design work, website development is one of the primary services Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out a business, church, mission, or non-profit organization so it is a vital piece of any organization's marketing plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for an organization's web presence. A well-made website illustrates to others that you take their business seriously.
+                    Quality website design & development is one of the foundational services Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out a business, church, mission, or non-profit organization so it is a vital piece of any organization's marketing and outreach plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for an organization's web presence. A well-made website illustrates to others that you take their business seriously.
                 </h2>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
