--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech" target="_blank">
                             <i class="fas fa-store"></i>
                             &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
@@ -134,7 +134,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am passionate about designing quality mobile apps, developing user-friendly websites, providing quality graphic designs, and offering computer parts and accessories all for the glorify God!
+                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am passionate about designing quality mobile apps, developing user-friendly websites, providing quality graphic designs, and offering computer parts and accessories all for the glory of God!
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column is-half">
