--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech" target="_blank">
                                 <i class="fas fa-store"></i>
                                 &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
@@ -249,7 +249,7 @@
                         <h4>
                             <i>
                                 So pleased with the web and app support we have received from Justin. He is knowledgeable and resourceful. He took our existing website and developed apps in iOS and Android. He configured our website to view and work well on a smartphone. He also developed forms that worked well on all three.
-                            </i><br><br><b>Heith Mitchell, Executive Director, BMA Texas Missions</b>
+                            </i><br><br><b>Heith Mitchell - Executive Director, BMA Texas Missions</b>
                         </h4>
                     </div><br>
                     <div class="column">
