--- a/products.html
+++ b/products.html
@@ -97,7 +97,7 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech" target="_blank">
                                 <i class="fas fa-store"></i>
                                 &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
