--- a/apps.html
+++ b/apps.html
@@ -140,9 +140,9 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
-                                    <h3><b>$250 initial deposit</b></h3>
+                                    <h3><b>$299 one-time setup charge</b></h3>
                                     <h3><b>$100 per month to develop for both <br> Android and iOS</b></h3>
-                                    <h3><b>$250 final payment upon deployment</b></h3>
+                                    <!-- <h3><b>$250 final payment upon deployment</b></h3> -->
                                     <h3>Deployment to the app stores</h3>
                                     <h3>Simple app consisting of up to three (3) pages <br> with tab navigation</h3>
                                     <h3>One (1) major feature integration</h3>
@@ -164,9 +164,9 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
-                                    <h3><b>$250 initial deposit</b></h3>
+                                    <h3><b>$299 one-time setup charge</b></h3>
                                     <h3><b>$150 per month to develop for both <br> Android and iOS</b></h3>
-                                    <h3><b>$250 final payment upon deployment</b></h3>
+                                    <!-- <h3><b>$250 final payment upon deployment</b></h3> -->
                                     <h3>Deployment to the app stores</h3>
                                     <h3>Up to ten (10) pages with option <br> for side menu navigation as well as tabs</h3>
                                     <h3>Up to three (3) major features integrations</h3>
@@ -188,9 +188,9 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
-                                    <h3><b>$250 initial deposit</b></h3>
+                                    <h3><b>$299 one-time setup charge</b></h3>
                                     <h3><b>$200 per month to develop for both <br> Android and iOS</b></h3>
-                                    <h3><b>$250 final payment upon deployment</b></h3>
+                                    <!-- <h3><b>$250 final payment upon deployment</b></h3> -->
                                     <h3>Deployment to the app stores</h3>
                                     <h3>More than ten (10) pages with <br> any navigation option</h3>
                                     <h3>Unlimited feature integrations</h3>
