--- a/websites.html
+++ b/websites.html
@@ -132,16 +132,16 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-display"></i>
+                                    <i class="fa-solid fa-code"></i>
                                     Custom Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation!</h3>
-                                    <h3>$250 initial deposit</h3>
-                                    <h3>$250 final payment upon deployment</h3>
-                                    <h3>$200 monthly service which includes: <br><br><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
+                                    <h3>$299 one-time setup charge</h3>
+                                    <!-- <h3>$250 final payment upon deployment</h3> -->
+                                    <h3>$150 monthly service which includes: <br><br><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
                                     <h3>Unlimited pages</h3>
                                     <h3>$100 per year for hosting renewal</h3>
                                     <h3><b><i>BEST OVERALL VALUE!</i></b></h3>
@@ -154,16 +154,16 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-laptop"></i>
+                                    <i class="fa-solid fa-desktop"></i>
                                     CMS Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation!</h3>
-                                    <h3>$250 initial deposit</h3>
-                                    <h3>$250 final payment upon deployment</h3>
-                                    <h3>$125 monthly service which includes: <br><br> <b>CMS Website Development, Graphic Design, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
+                                    <h3>$299 one-time setup charge</h3>
+                                    <!-- <h3>$250 final payment upon deployment</h3> -->
+                                    <h3>$100 monthly service which includes: <br><br> <b>CMS Website Development, Graphic Design, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
                                     <h3>Ten (10) page limit</h3>
                                     <h3>$100 per page for development <br> over the 10 page limit as a one-time charge</h3>
                                     <h3>$100 per year for hosting renewal</h3>
@@ -176,15 +176,15 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-laptop"></i>
+                                    <i class="fa-solid fa-laptop-code"></i>
                                     One-Time Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation!</h3>
-                                    <h3>$500 initial deposit</h3>
-                                    <h3>$500 final payment upon deployment</h3>
+                                    <h3>$499 one-time charge</h3>
+                                    <!-- <h3>$500 final payment upon deployment</h3> -->
                                     <h3>Package includes: <br><br> <b>CMS Website Development, Graphic Design, Domain Setup, and Hosting Setup</b></h3>
                                     <h3>$100 per page for development <br> (Five page minimum)</h3>
                                     <h3>Optional $100 per month for content management and periodic updates</h3>
