--- a/apps.html
+++ b/apps.html
@@ -147,7 +147,10 @@
                                     <h3>Simple app consisting of up to three (3) pages <br> with tab navigation</h3>
                                     <h3>One (1) major feature integration</h3>
                                     <h3>$100 per feature for one (1) <br> additional feature</h3>
-                                    <h3>Periodic updates made as needed <br> to publish updated content</h3>
+                                    <h3>Periodic updates made as needed <br> to publish updated content</h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button" href="https://bit.ly/3LoHFsP" target="_blank"><b>Get Started!</b></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +174,10 @@
                                     <h3>Up to ten (10) pages with option <br> for side menu navigation as well as tabs</h3>
                                     <h3>Up to three (3) major features integrations</h3>
                                     <h3>$100 per feature for up to two (2) <br> additional features</h3>
-                                    <h3>Periodic updates made as needed <br> to publish updated content</h3>
+                                    <h3>Periodic updates made as needed <br> to publish updated content</h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button" href="https://bit.ly/3BqNWzs" target="_blank"><b>Get Started!</b></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -195,7 +201,10 @@
                                     <h3>More than ten (10) pages with <br> any navigation option</h3>
                                     <h3>Unlimited feature integrations</h3>
                                     <h3>$100 per feature for unlimited <br> additional features</h3>
-                                    <h3>Periodic updates made as needed <br> to publish updated content.</h3>
+                                    <h3>Periodic updates made as needed <br> to publish updated content.</h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button" href="https://bit.ly/3BJp4Dx" target="_blank"><b>Get Started!</b></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
