--- a/affiliate-disclosure.html
+++ b/affiliate-disclosure.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html class="has-navbar-fixed-top" lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-FGY8C8H4V5"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag(){dataLayer.push(arguments)}
+            gtag('js', new Date())
+
+            gtag('config', 'G-FGY8C8H4V5')
+        </script>
         <meta charset="utf-8">
         <meta http-equiv="Cache-Control" content="public, max-age:2592000" />
         <meta name="description" content="Read about the affiliate disclosure and the type of affiliate programs of which Kingdom Application Solutions LLC is a part." />
