--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html class="has-navbar-fixed-top" lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-FGY8C8H4V5"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag(){dataLayer.push(arguments)}
+            gtag('js', new Date())
+
+            gtag('config', 'G-FGY8C8H4V5')
+        </script>
         <meta charset="utf-8">
         <meta http-equiv="Cache-Control" content="public, max-age:2592000" />
         <meta name="description" content="The official website for Kingdom Application Solutions LLC." />
@@ -109,7 +118,7 @@
                         <img class="home-image" src="./images/header.webp" width="500" height="281" alt="Our logo">
                     </picture><br>
                     <h1 class="title white-text">
-                        Glorifying God by Developing Quality Mobile Apps,  Websites, & Graphic Design!
+                        Quality Mobile Apps,  Websites, & Graphic Design!
                     </h1>
                 </div>    
             </div>     
