--- a/resources.html
+++ b/resources.html
@@ -2,13 +2,13 @@
 <html class="has-navbar-fixed-top" lang="en">
     <head>
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-FGY8C8H4V5"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7HPHSWVB6N"></script>
         <script>
-            window.dataLayer = window.dataLayer || []
-            function gtag(){dataLayer.push(arguments)}
-            gtag('js', new Date())
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-            gtag('config', 'G-FGY8C8H4V5')
+            gtag('config', 'G-7HPHSWVB6N');
         </script>
         <meta charset="utf-8">
         <meta http-equiv="Cache-Control" content="public, max-age:2592000" />
