--- a/apps.html
+++ b/apps.html
@@ -148,10 +148,8 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h3>Free initial consultation and quote!</h3>
-                                    <h3><b>$299 one-time setup charge</b></h3>
+                                    <h3>No setup fee!</h3>
                                     <h3><b>$100 per month to develop for both <br> Android and iOS</b></h3>
-                                    <!-- <h3><b>$250 final payment upon deployment</b></h3> -->
                                     <h3>Deployment to the app stores</h3>
                                     <h3>Simple app consisting of up to three (3) pages <br> with tab navigation</h3>
                                     <h3>One (1) major feature integration</h3>
@@ -175,13 +173,11 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h3>Free initial consultation and quote!</h3>
-                                    <h3><b>$299 one-time setup charge</b></h3>
+                                    <h3>No setup fee!</h3>
                                     <h3><b>$150 per month to develop for both <br> Android and iOS</b></h3>
-                                    <!-- <h3><b>$250 final payment upon deployment</b></h3> -->
                                     <h3>Deployment to the app stores</h3>
                                     <h3>Up to ten (10) pages with option <br> for side menu navigation as well as tabs</h3>
-                                    <h3>Up to three (3) major features integrations</h3>
+                                    <h3>Up to three (3) major feature integrations</h3>
                                     <h3>$100 per feature for up to two (2) <br> additional features</h3>
                                     <h3>Periodic updates made as needed <br> to publish updated content</h3><br>
                                     <div class="buttons is-centered">
@@ -202,13 +198,11 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h3>Free initial consultation and quote!</h3>
-                                    <h3><b>$299 one-time setup charge</b></h3>
+                                    <h3>No setup fee!</h3>
                                     <h3><b>$200 per month to develop for both <br> Android and iOS</b></h3>
-                                    <!-- <h3><b>$250 final payment upon deployment</b></h3> -->
                                     <h3>Deployment to the app stores</h3>
                                     <h3>More than ten (10) pages with <br> any navigation option</h3>
-                                    <h3>Unlimited feature integrations</h3>
+                                    <h3>Up to five (5) major feature integrations</h3>
                                     <h3>$100 per feature for unlimited <br> additional features</h3>
                                     <h3>Periodic updates made as needed <br> to publish updated content.</h3><br>
                                     <div class="buttons is-centered">
