--- a/websites.html
+++ b/websites.html
@@ -147,12 +147,11 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h3>Free initial consultation!</h3>
-                                    <h3>$299 one-time setup charge</h3>
-                                    <!-- <h3>$250 final payment upon deployment</h3> -->
-                                    <h3>$150 monthly service which includes: <br><br><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
-                                    <h3>Unlimited pages</h3>
-                                    <h3>$100 per year for hosting renewal</h3>
+                                    <h3>No setup fee!</h3>
+                                    <h3>$150 monthly service which includes: <br><br><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees, and Periodic Updates</b></h3>
+                                    <h3>Twenty (20) page limit</h3>
+                                    <h3>$100 per page for development <br> over the 20 page limit as a one-time charge</h3>
+                                    <h3>Free annual hosting renewal!</h3>
                                     <h3><b><i>BEST OVERALL VALUE!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3UcGXTz" target="_blank"><b>Get Started!</b></a>
@@ -172,13 +171,12 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h3>Free initial consultation!</h3>
-                                    <h3>$299 one-time setup charge</h3>
-                                    <!-- <h3>$250 final payment upon deployment</h3> -->
-                                    <h3>$100 monthly service which includes: <br><br> <b>CMS Website Development, Graphic Design, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
+                                    <h3>No setup fee!</h3>
+                                    <h3>$100 monthly service which includes: <br><br> <b>Content Management Website Development, Graphic Design, Search Engine Optimization, Domain Setup, Hosting Fees, and Periodic Updates</b></h3>
                                     <h3>Ten (10) page limit</h3>
                                     <h3>$100 per page for development <br> over the 10 page limit as a one-time charge</h3>
-                                    <h3>$100 per year for hosting renewal</h3><br>
+                                    <h3>$50 per year for hosting renewal!</h3>
+                                    <h3><b><i>BEST VALUE FOR QUICK DEVELOPMENT!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3QWIRES" target="_blank"><b>Get Started!</b></a>
                                     </div>
@@ -197,13 +195,12 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h3>Free initial consultation!</h3>
-                                    <h3>$499 one-time charge</h3>
-                                    <!-- <h3>$500 final payment upon deployment</h3> -->
-                                    <h3>Package includes: <br><br> <b>CMS Website Development, Graphic Design, Domain Setup, and Hosting Setup</b></h3>
-                                    <h3>$100 per page for development <br> (Five page minimum)</h3>
-                                    <h3>Optional $100 per month for content management and periodic updates</h3>
-                                    <h3><b>BEST VALUE FOR SELF MANAGEMENT!</b></h3><br>
+                                    <h3>$100 one-time setup fee</h3>
+                                    <h3>Package includes: <br><br> <b>Content Management Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
+                                    <h3>Ten (10) page minimum</h3>
+                                    <h3>$100 per page for development <br> (Ten page minimum)</h3>
+                                    <h3>Optional $100 per month for maintenance and updates</h3>
+                                    <h3><b><i>BEST VALUE FOR SELF MANAGEMENT!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3xwkR4D" target="_blank"><b>Get Started!</b></a>
                                     </div>
