Fixed line break issue

--- a/apps.html
+++ b/apps.html
@@ -149,12 +149,12 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>No setup fee!</h3>
-                                    <h3><b>$100 per month to develop for both <br> Android and iOS</b></h3>
+                                    <h3><b>$100 per month to develop for both Android and iOS</b></h3>
                                     <h3>Deployment to the app stores</h3>
-                                    <h3>Simple app consisting of up to three (3) pages <br> with tab navigation</h3>
+                                    <h3>Simple app consisting of up to three (3) pages with tab navigation</h3>
                                     <h3>One (1) major feature integration</h3>
-                                    <h3>$100 per feature for one (1) <br> additional feature</h3>
-                                    <h3>Periodic updates made as needed <br> to publish updated content</h3><br>
+                                    <h3>$100 per feature for one (1) additional feature</h3>
+                                    <h3>Periodic updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3LoHFsP" target="_blank"><b>Get Started!</b></a>
                                     </div>
@@ -174,12 +174,12 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>No setup fee!</h3>
-                                    <h3><b>$150 per month to develop for both <br> Android and iOS</b></h3>
+                                    <h3><b>$150 per month to develop for both Android and iOS</b></h3>
                                     <h3>Deployment to the app stores</h3>
-                                    <h3>Up to ten (10) pages with option <br> for side menu navigation as well as tabs</h3>
+                                    <h3>Up to ten (10) pages with option for side menu navigation as well as tabs</h3>
                                     <h3>Up to three (3) major feature integrations</h3>
-                                    <h3>$100 per feature for up to two (2) <br> additional features</h3>
-                                    <h3>Periodic updates made as needed <br> to publish updated content</h3><br>
+                                    <h3>$100 per feature for up to two (2) additional features</h3>
+                                    <h3>Periodic updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3BqNWzs" target="_blank"><b>Get Started!</b></a>
                                     </div>
@@ -199,12 +199,12 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>No setup fee!</h3>
-                                    <h3><b>$200 per month to develop for both <br> Android and iOS</b></h3>
+                                    <h3><b>$200 per month to develop for both Android and iOS</b></h3>
                                     <h3>Deployment to the app stores</h3>
-                                    <h3>More than ten (10) pages with <br> any navigation option</h3>
+                                    <h3>More than ten (10) pages with any navigation option</h3>
                                     <h3>Up to five (5) major feature integrations</h3>
-                                    <h3>$100 per feature for unlimited <br> additional features</h3>
-                                    <h3>Periodic updates made as needed <br> to publish updated content.</h3><br>
+                                    <h3>$100 per feature for unlimited additional features</h3>
+                                    <h3>Periodic updates made as needed to publish updated content.</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3BJp4Dx" target="_blank"><b>Get Started!</b></a>
                                     </div>
