Updated pricing & added landing page

--- a/websites.html
+++ b/websites.html
@@ -148,7 +148,7 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>No setup fee!</h3>
-                                    <h3>$150 monthly service which includes: <br><br><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees, and Periodic Updates</b></h3>
+                                    <h3>$100 monthly service which includes: <br><br><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees, and Periodic Updates</b></h3>
                                     <h3>Twenty (20) page limit</h3>
                                     <h3>$100 per page for development <br> over the 20 page limit as a one-time charge</h3>
                                     <h3>Free annual hosting renewal!</h3>
@@ -172,7 +172,7 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>No setup fee!</h3>
-                                    <h3>$100 monthly service which includes: <br><br> <b>Content Management Website Development, Graphic Design, Search Engine Optimization, Domain Setup, Hosting Fees, and Periodic Updates</b></h3>
+                                    <h3>$50 monthly service which includes: <br><br> <b>Content Management Website Development, Graphic Design, Search Engine Optimization, Domain Setup, Hosting Fees, and Periodic Updates</b></h3>
                                     <h3>Ten (10) page limit</h3>
                                     <h3>$100 per page for development <br> over the 10 page limit as a one-time charge</h3>
                                     <h3>$50 per year for hosting renewal!</h3>
@@ -198,8 +198,8 @@
                                     <h3>$100 one-time setup fee</h3>
                                     <h3>Package includes: <br><br> <b>Content Management Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
                                     <h3>Ten (10) page minimum</h3>
-                                    <h3>$100 per page for development <br> (Ten page minimum)</h3>
-                                    <h3>Optional $100 per month for maintenance and updates</h3>
+                                    <h3>$100 per page for development <br> for unlimited pages</h3>
+                                    <h3>Optional $50 per month for maintenance and updates</h3>
                                     <h3><b><i>BEST VALUE FOR SELF MANAGEMENT!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3xwkR4D" target="_blank"><b>Get Started!</b></a>
@@ -208,6 +208,31 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="columns">
+                    <div class="column is-one-fifth"></div>
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-laptop-code"></i>
+                                    Landing Page
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h3>$100 one-time setup fee</h3>
+                                    <h3>Package includes: <br><br> <b>Content Management Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
+                                    <h3>$500 for development</h3>
+                                    <h3><b><i>BEST VALUE FOR A SIMPLE ONE-PAGE SITE!</i></b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button" href="https://bit.ly/3yfJTFk" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-one-fifth"></div>
                 </div>
             </div>     
         </section>
